# sandook

./: .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
dashboard/: .gitignore  constants.py  data_processor.py  index.py  plotter.py  requirements.txt  utils.py
data/profile_rates/: README.md  S39WNA0KB01161.csv  S39WNA0KC01659.csv  S39WNA0KC02074.csv  S47ANA0M400923.csv  S47ANA0M403393.csv  S47ANA0M403400.csv  S5CVNA0N101050.csv  SDM000024C8D.csv
data/ssd_models/: S39WNA0KB01161_1000w.model  S39WNA0KB01161_100r.model  S39WNA0KB01161_100w.model  S39WNA0KB01161_200w.model  S39WNA0KB01161_250w.model  S39WNA0KB01161_300w.model  S39WNA0KB01161_500w.model  S39WNA0KB01161_700w.model  S39WNA0KB01161_750w.model  S39WNA0KC01659_1000w.model  S39WNA0KC01659_100r.model  S39WNA0KC01659_100w.model  S39WNA0KC01659_200w.model  S39WNA0KC01659_250w.model  S39WNA0KC01659_300w.model  S39WNA0KC01659_500w.model  S39WNA0KC01659_700w.model  S39WNA0KC01659_750w.model  S39WNA0KC02074_1000w.model  S39WNA0KC02074_100r.model  S39WNA0KC02074_100w.model  S39WNA0KC02074_200w.model  S39WNA0KC02074_250w.model  S39WNA0KC02074_300w.model  S39WNA0KC02074_500w.model  S39WNA0KC02074_700w.model  S39WNA0KC02074_750w.model  S39WNA0KC02077_1000w.model  S39WNA0KC02077_100r.model  S39WNA0KC02077_250w.model  S39WNA0KC02078_1000w.model  S39WNA0KC02078_100r.model  S39WNA0KC02078_250w.model  S39WNA0KC02087_1000w.model  S39WNA0KC02087_100r.model  S39WNA0KC02087_250w.model  S39WNA0KC02089_1000w.model  S39WNA0KC02089_100r.model  S39WNA0KC02089_250w.model  S47ANA0M400877_1000w.model  (+87 more)
data/ssd_profiles/: S39WNA0KB01161_1000w.csv  S39WNA0KB01161_100r.csv  S39WNA0KB01161_100w.csv  S39WNA0KB01161_200w.csv  S39WNA0KB01161_250w.csv  S39WNA0KB01161_300w.csv  S39WNA0KB01161_500w.csv  S39WNA0KB01161_700w.csv  S39WNA0KB01161_750w.csv  S39WNA0KC01659_1000w.csv  (+110 more)
lib/: CMakeLists.txt
lib/ewma/: Ewma.h
lib/patches/caladan/: config.patch  disable_pyverbs.patch  log.patch  memless.patch  rust-bindings-bindgen.patch  rust-bindings-perthread.patch  shared_mk.patch  spdk_ns.patch  spdk_setup.sh  ssd_serial_num.patch  storage-bindings-for-TRIM.patch  storage.patch  tcache.patch
lib/patches/ublk/: polling.patch
lib/stmpct/: gk.h
lib/tdigest/: TDigest.h
loadgen/: Cargo.toml  README.md  build.rs
loadgen/.cargo/: config
loadgen/src/: backend.rs  dns.rs  fakeconn.rs  fakeconn_spdk.rs  http.rs  main.rs  memcached.rs  payload.rs  reflex.rs  sandook.rs  spdk.rs  tests.rs
nsdi-26-ae/: Experiments.md  QuickStart.md  README.md
sandook/: CMakeLists.txt
sandook/base/: CMakeLists.txt  compiler.h  constants.h  controller_stats.h  core_local_cache.h  counter.cc  counter.h  error.cc  error.h  hash.h  io.cc  io.h  io_callback.h  io_desc.h  log.h  msg.h  payload.h  queue_info.h  server_stats.h  time.h  types.h
sandook/bindings/: CMakeLists.txt  log.cc  log.h  net.h  rcu.h  runtime.h  storage.h  sync.h  thread.cc  thread.h  timer.cc  timer.h
sandook/blk_dev/: CMakeLists.txt  blk_dev.cc  blk_dev.h  blk_dev_agent.cc  blk_dev_agent.h  request_dispatcher.cc  request_dispatcher.h  run.cc
sandook/config/: CMakeLists.txt  config.cc  config.h
sandook/controller/: CMakeLists.txt  block_allocator.h  controller.cc  controller.h  controller_agent.cc  controller_agent.h  controller_conn_handler.cc  controller_conn_handler.h  run.cc  server_desc.h  volume_desc.h
sandook/disk_model/: disk_model.h
sandook/disk_server/: CMakeLists.txt  blk_server.cc  blk_server.h  disk_conn_handler.cc  disk_conn_handler.h  disk_monitor.h  disk_server.cc  disk_server.h  mem_server.cc  mem_server.h  run.cc  spdk_server.cc  spdk_server.h  storage_server.cc  storage_server.h
sandook/mem/: CMakeLists.txt  mem_hook.cc  slab.cc  slab.h
sandook/rpc/: CMakeLists.txt  rpc.cc  rpc.h
sandook/samples/: CMakeLists.txt
sandook/samples/read_write_blk_dev/: CMakeLists.txt  run.cc
sandook/scheduler/: common.h
sandook/scheduler/control_plane/: adaptive_rw_isolation_base.h  adaptive_rw_isolation_weak.h  base_scheduler.h  no_op.h  profile_guided.h  profile_guided_rw_isolation.h  rw_isolation.h  rw_isolation_base.h  rw_isolation_strict.h  rw_isolation_weak.h  scheduler.h  server_stats_manager.h
sandook/scheduler/data_plane/: base_read_scheduler.h  base_scheduler.h  base_write_scheduler.h  common.h  congestion_control.h  hash_write.h  random_read.h  random_read_hash_write.h  random_read_write.h  random_write.h  scheduler.h  server_stats_manager.h  weighted_read.h  weighted_read_hash_write.h  weighted_read_write.h  weighted_write.h
sandook/telemetry/: cc_telemetry.h  controller_rw_isolation_telemetry.h  disk_server_telemetry.h  system_load_telemetry.h  telemetry_obj.h  telemetry_stream.h
sandook/test/: CMakeLists.txt  bench_controller.cc  bench_rpc.cc  bench_telemetry.cc  bench_virtual_disk.cc  test_apps.cc  test_blk_dev.cc  test_control_plane_scheduler.cc  test_controller_agent.cc  test_data_plane_scheduler.cc  test_disk_model.cc  test_slab.cc  test_telemetry.cc  test_virtual_disk.cc
sandook/test/utils/: blk_dev_utils.cc  blk_dev_utils.h  test_utils.h  virtual_disk_utils.cc  virtual_disk_utils.h
sandook/test/utils/gtest/: assertion.h  main_wrapper.h
sandook/utils/: CMakeLists.txt  calibrated_time.cc  calibrated_time.h  pre_fill.cc  storage_perf.cc
sandook/virtual_disk/: CMakeLists.txt  bindings.cc  bindings.h  block_cache.h  block_resolver.h  loadgen_utils.cc  loadgen_utils.h  virtual_disk.h  virtual_disk_base.cc  virtual_disk_base.h  virtual_disk_local.cc  virtual_disk_local.h  virtual_disk_remote.cc  virtual_disk_remote.h
sandook/virtual_disk/rust_bindings/: Cargo.toml  build.rs  sandook.h
sandook/virtual_disk/rust_bindings/.cargo/: config
scripts/: build.sh  configure_switch.py  format_disk.sh  generate_flamegraph.sh  generate_ssd_models.py  helper.sh  install_caladan.sh  install_cmake.sh  install_dashboard.sh  install_deps.sh  install_liburing.sh  install_ubdsrv.sh  merge_buckets.py  plot_ssd_profiles.py  pre_commit_test.sh  profile_disk.sh  reset.sh  run.sh  run_dashboard.sh  setup.sh  test.sh  trim_nvme.sh
(+42 files in other folders)
