[package]
name = "synthetic"
version = "0.1.0"
authors = ["The Shenango Developers"]

[[bin]]
name = "synthetic"
path = "src/main.rs"

[[bin]]
name = "tests"
path = "src/tests.rs"

[[bin]]
name = "spdk"
path = "src/spdk.rs"

[dependencies]
arrayvec = "0.7.2"
byteorder = "1"
clap = "2.32.0"
dns-parser = "0.7.1"
hostname = "0.1.4"
itertools = "0.8.0"
libc = "0.2"
rand = "0.7.3"
rand_distr = "0.3.0"
rand_mt = "3"
serde = "1.0"
net2 = "0.2"
mersenne_twister = "1.1.1"
shenango = { path = "../lib/caladan/bindings/rust" }
vdisk_rust = { path = "../sandook/virtual_disk/rust_bindings" }
once_cell = "1.18.0"
dialoguer = "0.11.0"
regex = "1.10.2"

[profile.release]
debug=false
panic = "abort"

[features]
default = ["sandook"]
sandook = []
spdk = []
