add_subdirectory(config)
add_subdirectory(base)
add_subdirectory(bindings)
add_subdirectory(mem)
add_subdirectory(rpc)
add_subdirectory(blk_dev)
add_subdirectory(disk_server)
add_subdirectory(controller)
add_subdirectory(virtual_disk)
add_subdirectory(samples)
add_subdirectory(test)
add_subdirectory(utils)
